// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`AuthButton Component matches snapshot when Logged in 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AuthModal
    isAuthenticated={true}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "autoFocus": true,
      "backdrop": true,
      "backdropTransition": Object {
        "mountOnEnter": true,
        "timeout": 150,
      },
      "centered": false,
      "children": Array [
        <ModalHeader
          charCode={215}
          closeAriaLabel="Close"
          tag="h5"
          wrapTag="div"
        >
          <div
            className="banner"
          >
            <img
              alt="logo"
              className="header-logo"
              src="bcgovlogo.svg"
            />
            <h1>
              BC Gov Reggie
            </h1>
          </div>
        </ModalHeader>,
        <ModalBody
          tag="div"
        >
          Please login before starting the Rocketchat Registration process with Reggie
        </ModalBody>,
        <ModalFooter
          tag="div"
        >
          <Link
            className="auth-button"
            replace={false}
            to="/login"
          >
            Login
          </Link>
        </ModalFooter>,
      ],
      "fade": false,
      "isOpen": false,
      "keyboard": true,
      "modalClassName": "auth-modal",
      "modalTransition": Object {
        "timeout": 300,
      },
      "onClosed": [Function],
      "onOpened": [Function],
      "role": "dialog",
      "zIndex": 1050,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "charCode": 215,
          "children": <div
            className="banner"
          >
            <img
              alt="logo"
              className="header-logo"
              src="bcgovlogo.svg"
            />
            <h1>
              BC Gov Reggie
            </h1>
          </div>,
          "closeAriaLabel": "Close",
          "tag": "h5",
          "wrapTag": "div",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="logo"
                className="header-logo"
                src="bcgovlogo.svg"
              />,
              <h1>
                BC Gov Reggie
              </h1>,
            ],
            "className": "banner",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "logo",
                "className": "header-logo",
                "src": "bcgovlogo.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "BC Gov Reggie",
              },
              "ref": null,
              "rendered": "BC Gov Reggie",
              "type": "h1",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Please login before starting the Rocketchat Registration process with Reggie",
          "tag": "div",
        },
        "ref": null,
        "rendered": "Please login before starting the Rocketchat Registration process with Reggie",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Link
            className="auth-button"
            replace={false}
            to="/login"
          >
            Login
          </Link>,
          "tag": "div",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Login",
            "className": "auth-button",
            "replace": false,
            "to": "/login",
          },
          "ref": null,
          "rendered": "Login",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "autoFocus": true,
        "backdrop": true,
        "backdropTransition": Object {
          "mountOnEnter": true,
          "timeout": 150,
        },
        "centered": false,
        "children": Array [
          <ModalHeader
            charCode={215}
            closeAriaLabel="Close"
            tag="h5"
            wrapTag="div"
          >
            <div
              className="banner"
            >
              <img
                alt="logo"
                className="header-logo"
                src="bcgovlogo.svg"
              />
              <h1>
                BC Gov Reggie
              </h1>
            </div>
          </ModalHeader>,
          <ModalBody
            tag="div"
          >
            Please login before starting the Rocketchat Registration process with Reggie
          </ModalBody>,
          <ModalFooter
            tag="div"
          >
            <Link
              className="auth-button"
              replace={false}
              to="/login"
            >
              Login
            </Link>
          </ModalFooter>,
        ],
        "fade": false,
        "isOpen": false,
        "keyboard": true,
        "modalClassName": "auth-modal",
        "modalTransition": Object {
          "timeout": 300,
        },
        "onClosed": [Function],
        "onOpened": [Function],
        "role": "dialog",
        "zIndex": 1050,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "charCode": 215,
            "children": <div
              className="banner"
            >
              <img
                alt="logo"
                className="header-logo"
                src="bcgovlogo.svg"
              />
              <h1>
                BC Gov Reggie
              </h1>
            </div>,
            "closeAriaLabel": "Close",
            "tag": "h5",
            "wrapTag": "div",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <img
                  alt="logo"
                  className="header-logo"
                  src="bcgovlogo.svg"
                />,
                <h1>
                  BC Gov Reggie
                </h1>,
              ],
              "className": "banner",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "logo",
                  "className": "header-logo",
                  "src": "bcgovlogo.svg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "BC Gov Reggie",
                },
                "ref": null,
                "rendered": "BC Gov Reggie",
                "type": "h1",
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Please login before starting the Rocketchat Registration process with Reggie",
            "tag": "div",
          },
          "ref": null,
          "rendered": "Please login before starting the Rocketchat Registration process with Reggie",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Link
              className="auth-button"
              replace={false}
              to="/login"
            >
              Login
            </Link>,
            "tag": "div",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Login",
              "className": "auth-button",
              "replace": false,
              "to": "/login",
            },
            "ref": null,
            "rendered": "Login",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;

exports[`AuthButton Component matches snapshot when Logged out 1`] = `
ShallowWrapper {
  Symbol(enzyme.__root__): [Circular],
  Symbol(enzyme.__unrendered__): <AuthModal
    isAuthenticated={false}
  />,
  Symbol(enzyme.__renderer__): Object {
    "batchedUpdates": [Function],
    "checkPropTypes": [Function],
    "getNode": [Function],
    "render": [Function],
    "simulateError": [Function],
    "simulateEvent": [Function],
    "unmount": [Function],
  },
  Symbol(enzyme.__node__): Object {
    "instance": null,
    "key": undefined,
    "nodeType": "class",
    "props": Object {
      "autoFocus": true,
      "backdrop": true,
      "backdropTransition": Object {
        "mountOnEnter": true,
        "timeout": 150,
      },
      "centered": false,
      "children": Array [
        <ModalHeader
          charCode={215}
          closeAriaLabel="Close"
          tag="h5"
          wrapTag="div"
        >
          <div
            className="banner"
          >
            <img
              alt="logo"
              className="header-logo"
              src="bcgovlogo.svg"
            />
            <h1>
              BC Gov Reggie
            </h1>
          </div>
        </ModalHeader>,
        <ModalBody
          tag="div"
        >
          Please login before starting the Rocketchat Registration process with Reggie
        </ModalBody>,
        <ModalFooter
          tag="div"
        >
          <Link
            className="auth-button"
            replace={false}
            to="/login"
          >
            Login
          </Link>
        </ModalFooter>,
      ],
      "fade": false,
      "isOpen": true,
      "keyboard": true,
      "modalClassName": "auth-modal",
      "modalTransition": Object {
        "timeout": 300,
      },
      "onClosed": [Function],
      "onOpened": [Function],
      "role": "dialog",
      "zIndex": 1050,
    },
    "ref": null,
    "rendered": Array [
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "charCode": 215,
          "children": <div
            className="banner"
          >
            <img
              alt="logo"
              className="header-logo"
              src="bcgovlogo.svg"
            />
            <h1>
              BC Gov Reggie
            </h1>
          </div>,
          "closeAriaLabel": "Close",
          "tag": "h5",
          "wrapTag": "div",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "host",
          "props": Object {
            "children": Array [
              <img
                alt="logo"
                className="header-logo"
                src="bcgovlogo.svg"
              />,
              <h1>
                BC Gov Reggie
              </h1>,
            ],
            "className": "banner",
          },
          "ref": null,
          "rendered": Array [
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "alt": "logo",
                "className": "header-logo",
                "src": "bcgovlogo.svg",
              },
              "ref": null,
              "rendered": null,
              "type": "img",
            },
            Object {
              "instance": null,
              "key": undefined,
              "nodeType": "host",
              "props": Object {
                "children": "BC Gov Reggie",
              },
              "ref": null,
              "rendered": "BC Gov Reggie",
              "type": "h1",
            },
          ],
          "type": "div",
        },
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": "Please login before starting the Rocketchat Registration process with Reggie",
          "tag": "div",
        },
        "ref": null,
        "rendered": "Please login before starting the Rocketchat Registration process with Reggie",
        "type": [Function],
      },
      Object {
        "instance": null,
        "key": undefined,
        "nodeType": "function",
        "props": Object {
          "children": <Link
            className="auth-button"
            replace={false}
            to="/login"
          >
            Login
          </Link>,
          "tag": "div",
        },
        "ref": null,
        "rendered": Object {
          "instance": null,
          "key": undefined,
          "nodeType": "class",
          "props": Object {
            "children": "Login",
            "className": "auth-button",
            "replace": false,
            "to": "/login",
          },
          "ref": null,
          "rendered": "Login",
          "type": [Function],
        },
        "type": [Function],
      },
    ],
    "type": [Function],
  },
  Symbol(enzyme.__nodes__): Array [
    Object {
      "instance": null,
      "key": undefined,
      "nodeType": "class",
      "props": Object {
        "autoFocus": true,
        "backdrop": true,
        "backdropTransition": Object {
          "mountOnEnter": true,
          "timeout": 150,
        },
        "centered": false,
        "children": Array [
          <ModalHeader
            charCode={215}
            closeAriaLabel="Close"
            tag="h5"
            wrapTag="div"
          >
            <div
              className="banner"
            >
              <img
                alt="logo"
                className="header-logo"
                src="bcgovlogo.svg"
              />
              <h1>
                BC Gov Reggie
              </h1>
            </div>
          </ModalHeader>,
          <ModalBody
            tag="div"
          >
            Please login before starting the Rocketchat Registration process with Reggie
          </ModalBody>,
          <ModalFooter
            tag="div"
          >
            <Link
              className="auth-button"
              replace={false}
              to="/login"
            >
              Login
            </Link>
          </ModalFooter>,
        ],
        "fade": false,
        "isOpen": true,
        "keyboard": true,
        "modalClassName": "auth-modal",
        "modalTransition": Object {
          "timeout": 300,
        },
        "onClosed": [Function],
        "onOpened": [Function],
        "role": "dialog",
        "zIndex": 1050,
      },
      "ref": null,
      "rendered": Array [
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "charCode": 215,
            "children": <div
              className="banner"
            >
              <img
                alt="logo"
                className="header-logo"
                src="bcgovlogo.svg"
              />
              <h1>
                BC Gov Reggie
              </h1>
            </div>,
            "closeAriaLabel": "Close",
            "tag": "h5",
            "wrapTag": "div",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "host",
            "props": Object {
              "children": Array [
                <img
                  alt="logo"
                  className="header-logo"
                  src="bcgovlogo.svg"
                />,
                <h1>
                  BC Gov Reggie
                </h1>,
              ],
              "className": "banner",
            },
            "ref": null,
            "rendered": Array [
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "alt": "logo",
                  "className": "header-logo",
                  "src": "bcgovlogo.svg",
                },
                "ref": null,
                "rendered": null,
                "type": "img",
              },
              Object {
                "instance": null,
                "key": undefined,
                "nodeType": "host",
                "props": Object {
                  "children": "BC Gov Reggie",
                },
                "ref": null,
                "rendered": "BC Gov Reggie",
                "type": "h1",
              },
            ],
            "type": "div",
          },
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": "Please login before starting the Rocketchat Registration process with Reggie",
            "tag": "div",
          },
          "ref": null,
          "rendered": "Please login before starting the Rocketchat Registration process with Reggie",
          "type": [Function],
        },
        Object {
          "instance": null,
          "key": undefined,
          "nodeType": "function",
          "props": Object {
            "children": <Link
              className="auth-button"
              replace={false}
              to="/login"
            >
              Login
            </Link>,
            "tag": "div",
          },
          "ref": null,
          "rendered": Object {
            "instance": null,
            "key": undefined,
            "nodeType": "class",
            "props": Object {
              "children": "Login",
              "className": "auth-button",
              "replace": false,
              "to": "/login",
            },
            "ref": null,
            "rendered": "Login",
            "type": [Function],
          },
          "type": [Function],
        },
      ],
      "type": [Function],
    },
  ],
  Symbol(enzyme.__options__): Object {
    "adapter": ReactSixteenAdapter {
      "options": Object {
        "enableComponentDidUpdateOnSetState": true,
        "legacyContextMode": "parent",
        "lifecycles": Object {
          "componentDidUpdate": Object {
            "onSetState": true,
          },
          "getChildContext": Object {
            "calledByRenderer": false,
          },
          "getDerivedStateFromProps": true,
          "getSnapshotBeforeUpdate": true,
          "setState": Object {
            "skipsComponentDidUpdateOnNullish": true,
          },
        },
      },
    },
  },
}
`;
